--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
 	<body>
 		<header id="header">
-			<!-- resume header with your name and title -->
 			<h1><b>RISHABH</b> KUMAR</h1>
 			<hr>
 			Web Developer
@@ -17,7 +16,6 @@
 			<article id="mainLeft">
 				<section>
 					<h2>CONTACT</h2>
-					<!-- contact info including social media -->
                     <p>
                         <i class="fa fa-envelope" aria-hidden="true"></i>
                         <a href="mailto:irishabh.k2311@gmail.com">irishabh.k2311@gmail.com</a>
@@ -33,43 +31,76 @@
 				</section>
 				<section>
 					<h2>SKILLS</h2>
-					<!-- your skills -->
-                    <p>HTML, CSS, JS, Java, Python, GitHub, VS Code...</p>
+                    <p><b>Programming</b>: Java, Python, C/C++</p>
+                    <p><b>Web Development</b>: HTML, CSS, JS</p>
+                    <p><b>Blockchain</b>: Web3</p>
+                    <p><b>Soft Skills</b>: Poised under pressure, fun and energetic, excellent interpersonal and communication skills</p>
 				</section>
 				<section>
 					<h2>EDUCATION</h2>
-					<!-- your education -->
-                    <h3>Computer Science </h3>
-                    <p>
-                        VIT BHOPAL UNIVERSITY
-                    </p>
-                    <p>
-                        2022-2026
-                    </p>
-				</section>            
+					<p><b>VIT Bhopal</b> | CSE Core</p>
+                    <p>2022 - 2026</p>
+				</section>
+				<section>
+					<h2>EXPERIENCE</h2>
+                    <p><b>HackOn Blocks | Web3 | June 2024 – July 2024</b></p>
+                    <ul>
+                        <li>Participated in a team hackathon which was 1 month long.</li>
+                        <li>HackOn Blocks is a month-long hackathon that offers you the chance to learn, create, and launch a project on your preferred blockchain, with a total prize pool of $50,000.</li>
+                    </ul>
+				</section>
+				<section>
+					<h2>CERTIFICATES</h2>
+                    <p><b>The Bits and Bytes of Computer Networking | Coursera</b></p>
+                    <ul>
+                        <li>Enhanced understanding of computer networking, enabling effective communication and collaboration in technical environments.</li>
+                        <li>Improved ability to troubleshoot and resolve networking issues, contributing to increased network uptime and reliability.</li>
+                        <li>Recognized for excellence in networking knowledge by peers and instructors, with practical applications in professional and academic projects.</li>
+                    </ul>
+				</section>
 			</article>
 			<article id="mainRight">
 				<section>
 					<h2>ABOUT</h2>
-					<!-- about you -->
                     <p>Passionate programmer with expertise in Python, Java, and C++. Enthusiastic about Web Development and eager to apply academic knowledge to real-world projects. Skilled in coding and problem-solving, with a strong drive to learn new technologies and contribute effectively to team efforts.</p>
 				</section>
 				<section>
-					<h2>EXPERIENCE</h2>
-					<!-- your work experience -->
-                    
-                    <p>
-                            <li><b>HackOn Blocks | JUNE 2024 - JULY 2024</b></li>
-                    </p>
-                    <p>
-                        Participated in a team hackathon which was 1 month long.
-                        HackOn Blocks is a month-long hackathon that offers you the chance to learn, create, and
-                        launch a project on your preferred blockchain. With the total prize pool $50,000!                    
-                    </p>
-                    <h2>PROJECTS</h2>
-                   <p><li><b>STARK</b></li></p>
-                   <p>Developed a freelancing website that facilitates collaboration in specialized fields, focusing on delivering a seamless user experience. Designed and implemented responsive user interfaces using HTML, CSS, and JavaScript, ensuring compatibility across various devices and browsers. Contributed as a frontend developer and successfully supported a growing user base of over 100 active users.</p>
-                    
+					<h2>PROJECTS</h2>
+					<h3><b>Web Development</b></h3>
+                    <p><b>STARK</b></p>
+                    <ul>
+                        <li>Developed a freelancing website that enables collaboration in specialized fields.</li>
+                        <li>Designed and implemented responsive user interfaces using HTML, CSS, and JavaScript.</li>
+                        <li>Contributed as a frontend developer, ensuring compatibility across various devices and browsers.</li>
+                        <li>Successfully supported over 100 active users.</li>
+                    </ul>
+					<h3><b>Blockchain</b></h3>
+                    <p><b>NFTHUB</b></p>
+                    <ul>
+                        <li>Created a dynamic marketplace for Non-Fungible Tokens (NFTs).</li>
+                        <li>Collaborated with backend developers to ensure seamless data flow and synchronization between frontend and blockchain.</li>
+                        <li>Integrated blockchain technology to enable secure and transparent transactions, enhancing user trust and platform credibility.</li>
+                        <li>Facilitated transactions for over 500 NFTs.</li>
+                    </ul>
+					<h3><b>Machine Learning</b></h3>
+                    <p><b>Movie Genre Detection</b></p>
+                    <ul>
+                        <li>Developed a machine learning model predicting movie genres based on descriptions with 85% accuracy.</li>
+                        <li>Employed Natural Language Processing (NLP) techniques to analyze textual features.</li>
+                        <li>Implemented Naive Bayes, SVM, and Random Forest algorithms to identify the most effective model.</li>
+                    </ul>
+                    <p><b>Detecting Spam Messages</b></p>
+                    <ul>
+                        <li>Created a model segregating spam messages from relevant ones with 83% accuracy.</li>
+                        <li>Conducted extensive testing and validation to ensure accuracy and reliability.</li>
+                        <li>Collected and preprocessed a comprehensive dataset of over 10,000 labeled messages.</li>
+                    </ul>
+                    <p><b>Credit Card Fraud Detection</b></p>
+                    <ul>
+                        <li>Developed a model detecting genuine transactions with 85% accuracy.</li>
+                        <li>Applied feature engineering methods to enhance model performance using transactional data.</li>
+                        <li>Analyzed a dataset of over 100,000 transactions to build and validate the model.</li>
+                    </ul>
 				</section>
 			</article>
 		</main>
